traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
var compt:Int = 0
var x:Int = 0
var y:Int = 0
  var posFin:Boolean = false

override def run() {
  
 

  
  while(posFin != true){
    avancer()
    
    
    }
  }
}

  
def avancer(){
  
  
  
 while (x != getMondeLargeur() - 1){
   	
    ecritMessage(compt)
    compt=compt+1;
   	x = x+1;
    setPos(x,y)
    
   
 		} 
  if (x == getMondeLargeur()-1 && y != getMondeHauteur()-1){
    y=y+1;
  }
  
 while (x  != 1)
   {
    ecritMessage(compt)
    compt=compt+1;
    
    setPos(x,y)
    x=x-1; 
    
     if(getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1){
      
      posFin = true;
    
  } 
 }
  